@@ -5,6 +5,7 @@ use Moo;
 
 extends 'Firebase';
 use Time::HiRes;
+use Text::Demoroniser qw/demoroniser_utf8/;
 
 around BUILDARGS => sub {
     my $orig = shift;
@@ -23,7 +24,11 @@ sub object_status {
     my $self      = shift;
     my $object    = shift;
     my $directory = join '/', $self->directory, $object->id, int(Time::HiRes::time()*1000);
-    return $self->put($directory, @_);
+    my $payload   = shift;
+    if (ref($payload) eq 'HASH' && exists $payload->{message}) {
+        $payload->{message} = demoroniser_utf8($payload->{message});
+    }
+    return $self->put($directory, $payload, @_);
 }
 
 1;
