@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2019-04-16
+ * Use Text::Demoroniser to clean messages being sent to Firebase
+
 2019-04-15
  * Do not die in sending email jobs.  Just delete the job.
 
